@@ -11,6 +11,7 @@ Revision 0.1.8
   type added.
 - Distribute is gone, switched to setuptools completely.
 - Fix to NamedType.__repr__() to work properly.
+- String typed float initializer to REAL type now supported.
 - Float typed mantissa initializer to REAL type for base 2 added.
 - Encoding bases 8 and 16 support for REAL type binary encoder added.
 - Fix to REAL type binary decoder to handle different bases and scale factor.
